--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,16 @@
 tag_build = 
 tag_date = 0
 
+
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+
+[versioneer]
+#VCS = git
+#style = pep440
+#versionfile_source =
+#versionfile_build =
+#tag_prefix =
+#parentdir_prefix =
+
