--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,6 +17,11 @@ sphinx:
 formats:
   - pdf
 
+# Apparently needed for python3.9
+build:
+  image: testing
+
+
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.9
